--- a/src/app/components/restaurants/restaurant/restaurant.component.html
+++ b/src/app/components/restaurants/restaurant/restaurant.component.html
@@ -1,3 +1,47 @@
-<p>
-  restaurant works!
-</p>
+<h1 class="display-4">Crear</h1>
+<form #form="ngForm" autocomplete="off" (submit)="onSubmit(form)">
+  <input 
+    type="hidden" 
+    name="uid"
+    #uid="ngModel"
+    [(ngModel)]="restaurantService.restaurant.uid">
+  <div class="form-group">
+    <input 
+      type="text" 
+      class="form-control"
+      name="name"
+      #name="ngModel"
+      [(ngModel)]="restaurantService.restaurant.name"
+      placeholder="Nombre"
+      required>
+      <div 
+        *ngIf="name.invalid && name.touched" 
+        class="validation-error" >
+        Requerido
+      </div>
+  </div>
+
+  <div class="form-group">
+    <input 
+      type="text" 
+      class="form-control"
+      name="photo"
+      #photo="ngModel"
+      [(ngModel)]="restaurantService.restaurant.photo"
+      placeholder="Foto"
+      required>
+      <div 
+        *ngIf="photo.invalid && photo.touched" 
+        class="validation-error" >
+        Requerido
+      </div>
+  </div>
+  <div class="form-group">
+    <button 
+      type="submit" 
+      class="btn btn-lg btn-block btn-success"
+      [disabled]="form.invalid">
+      <i class="fas fa-save"></i> Guardar
+    </button>
+  </div>
+</form>
