--- a/src/app/components/restaurants/restaurants.component.html
+++ b/src/app/components/restaurants/restaurants.component.html
@@ -42,6 +42,16 @@
           <h1 class="h2">Restaurantes</h1>
         </div>
 
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <app-restaurant></app-restaurant>
+            </div>
+            <div class="col-md-6">
+              <app-restaurants-list></app-restaurants-list>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
 
