Ultimo commit pre evalucacion, con mas tiempo quizas lo sacaba completo pero hay muchas cosas que aun no entiendo del todo

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -42,7 +42,8 @@
           <h1 class="h2">Home</h1>
         </div>
         
-        <div class="row" *ngIf="authService.userData as user">
+        <!-- TODO: Aun no tengo andfando bien de donde saca la info que muestra -->
+        <!-- <div class="row" *ngIf="authService.userData as user">
           <div class="col-md-12">
             <div class="media">
               <img class="align-self-start mr-5 img-thumbnail rounded-circle" src="{{(user.photoURL) ? user.photoURL : '/assets/dummy-user.png'}}"
@@ -55,7 +56,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </main>
