--- a/src/app/components/accounts/login/sign-in/sign-in.component.html
+++ b/src/app/components/accounts/login/sign-in/sign-in.component.html
@@ -19,12 +19,12 @@
         <span class="or"><span class="orInner"></span></span>
       </div>
       
-      <div class="formGroup">
+      <!-- <div class="formGroup">
         <button type="button" class="btn googleBtn" (click)="authService.googleAuth()">
           <i class="fab fa-google-plus-g"></i>
           Inicia sesión con Google
         </button>
-      </div>
+      </div> -->
 
       <div class="forgotPassword">
         <span routerLink="/forgot-password">Recuperar clave?</span>
