--- a/src/app/components/accounts/users/users.component.html
+++ b/src/app/components/accounts/users/users.component.html
@@ -42,6 +42,18 @@
           <h1 class="h2">Usuarios</h1>
         </div>
 
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <!-- TODO: hasta hacer el endpoint en NODE y no esa chanchada fea -->
+              <!-- <app-user></app-user> -->
+            </div>
+            <div class="col-md-6">
+              <app-users-list></app-users-list>
+            </div>
+          </div>
+        </div>
+
       </div>
     </main>
 
